# EvisionLight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.py  requirements.txt
3rd/spdlog/: CMakeLists.txt  README.md
3rd/spdlog/bench/: async_bench.cpp  bench.cpp  latency.cpp
3rd/spdlog/example/: example.cpp
3rd/spdlog/include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common.h  logger.h  pattern_formatter-inl.h  spdlog.h  tweakme.h
3rd/spdlog/include/spdlog/cfg/: argv.h
3rd/spdlog/include/spdlog/details/: backtracer.h  file_helper-inl.h
3rd/spdlog/include/spdlog/fmt/bundled/: format-inl.h
3rd/spdlog/include/spdlog/sinks/: ansicolor_sink-inl.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink.h  stdout_sinks-inl.h  syslog_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h
3rd/spdlog/tests/: catch.hpp  test_async.cpp  test_daily_logger.cpp  test_dup_filter.cpp  test_errors.cpp  test_pattern_formatter.cpp
EvisionCamera/: EvisionCamera.ui  EvisionCamera_ctl.py  __init__.py  app.qss  camera.py  dark.qss  fileIO.py  font.qss  icon.py  mainwindow.py  slot.py  text.py  usbcamGUI.py  util.py  v4l.py
EvisionCamera/icon/: no_transparency.sh
EvisionLog/: CMakeLists.txt  EvisionLog.cpp  EvisionLog.h  EvisionLog.py
EvisionSandbox/: camera_ctl.py  sandbox.ui  sandbox_ctl.py
EvisionUtils/: init.py
main/: Observable.h  imageutils.h  main.cpp  pixui.cpp
src/: CMakeLists.txt  init.py  main.py
src/EvisionSandBox/: CMakeLists.txt  EvisionLightView.cpp  EvisionLightView.h  Observer.h  imageutils.h  imgui.ini  main.cpp
src/backend/log/: CMakeLists.txt  EvisionLog.cpp  EvisionLog.h  EvisionLog.py
src/front/ui/: camera.ui  resProxy.qrc  sandbox.ui
src/front/uiController/: camera_ctl.py  sandbox_ctl.py
src/kalibra/: CMakeLists.txt  kalibra.cpp  kalibra.h
src/resources/: resProxy.qrc  resProxy_rc.py
src/ui/: camera.py  camera.ui  resProxy.qrc  sandbox.py  sandbox.ui
src/uiController/: camera_ctl.py  sandbox_ctl.py
